@@ -39,13 +39,8 @@ public class ExtensionGraalJs extends ExtensionAdaptor {
 
     public static final String NAME = "ExtensionGraalJs";
 
-    private static final List<Class<? extends Extension>> EXTENSION_DEPENDENCIES;
-
-    static {
-        List<Class<? extends Extension>> dependencies = new ArrayList<>(1);
-        dependencies.add(ExtensionScript.class);
-        EXTENSION_DEPENDENCIES = Collections.unmodifiableList(dependencies);
-    }
+    private static final List<Class<? extends Extension>> EXTENSION_DEPENDENCIES =
+            List.of(ExtensionScript.class);
 
     private GraalJsEngineWrapper engineWrapper;
 
